[project]
name = "fluentiter"
version = "1.3.0"
description = "Nice and clean iterator patterns for python"
authors = [{ name = "Damion Werner", email = "damion.werner@gmail.com" }]
requires-python = ">=3.8,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
more = ["more-itertools>=10.1.0,<11"]

[project.urls]
Repository = "https://github.com/damiondoesthings/fluentiter"
Documentation = "https://damiondoesthings.github.io/fluentiter/"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "black>=23.7.0,<24",
    "mypy>=1.4.1,<2",
    "ruff>=0.0.282,<0.0.283",
    "hypothesis>=6.82.0,<7",
    "poethepoet>=0.23.0,<0.24",
    "coverage>=7.3.1,<8",
    "isort>=5.12.0,<6",
]
docs = [
    "mkdocs>=1.5.2,<2",
    "mkdocstrings[python]>=0.22.0,<0.23",
    "mkdocs-material>=9.2.4,<10",
    "mkdocs-macros-plugin>=1.0.4,<2",
]
examples = ["types-requests>=2.31.0.4,<3"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["fluentiter"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.mypy]
exclude = ["tests"]

[tool.isort]
profile = "black"

[tool.poe.tasks]
_test = "coverage run -m pytest"
_report = "coverage report"
test = ["_test", "_report"]
isort = "isort ."
black = "black ."
mypy = "mypy ."
ruff = "ruff ."
format = ["isort", "black"]
lint = ["mypy", "ruff"]
all = ["format", "lint", "test"]

_docs_build = "mkdocs build"
_docs_publish = "mkdocs gh-deploy"
_docs_serve = "mkdocs serve"

docs_serve = ["_docs_build", "_docs_serve"]
docs_publish = ["_docs_build", "_docs_publish"]

[tool.coverage.run]
omit = ["tests/*"]
[tool.coverage.report]
fail_under = 100
